deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: carrental-deployment
    labels:
      app: carrental
spec:
  replicas: 2
  selector:
    matchLabels:
      app: carrental
  template:
    metadata:
      labels:
        app: carrental
    spec:
      containers:
      - name: carrental
        image: tiagomadeiradock/railscarrentalsapi:latest
        ports:
        - containerPort: 3000
      imagePullSecrets:
      - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: carrental-internal-service
spec:
  selector:
    app: carrental
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
